--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.13.0",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
