--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,68 +9,18 @@ services:
       - '3000:3000'
     depends_on:
       - db
+      - nats
 
-  kafka_b:
-    image: bitnami/kafka:3.4
-    hostname: kafka_b
+  nats:
+    image: nats:2.9-alpine
     ports:
-      - '9092:9092'
-      - '9094:9094'
+      - "4222:4222"
+      - "8222:8222"
+    command: 
+      - "-js"
+      - "-m=8222"
     volumes:
-      - 'kafka_data:/bitnami'
-    environment:
-      - KAFKA_ENABLE_KRAFT=yes
-      # - KAFKA_KRAFT_CLUSTER_ID=228f04bc-0895-11ee-be56-0242ac120002
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092,EXTERNAL://kafka_b:9094
-      - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_NODE_ID=1
-      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
-      # - BITNAMI_DEBUG=yes
-      - KAFKA_CFG_NUM_PARTITIONS=2
-
-  kafka-ui:
-    container_name: kafka-ui
-    image: provectuslabs/kafka-ui:v0.7.0
-    depends_on:
-      - kafka_b
-    ports:
-      - 8080:8080
-    environment:
-      DYNAMIC_CONFIG_ENABLED: 'true'
-      # LOGGING_LEVEL_ROOT: 'DEBUG'
-    volumes:
-      - ./config.yml:/etc/kafkaui/dynamic_config.yaml
-
-  rest-proxy:
-    image: confluentinc/cp-kafka-rest:6.0.0
-    depends_on:
-      - kafka_b
-    ports:
-      - 8082:8082
-    hostname: rest-proxy
-    container_name: rest-proxy
-    environment:
-      KAFKA_REST_HOST_NAME: rest-proxy
-      KAFKA_REST_BOOTSTRAP_SERVERS: 'kafka_b:9094'
-      KAFKA_REST_LISTENERS: 'http://0.0.0.0:8082'
-
-  # schema-registry:
-  #   image: confluentinc/cp-schema-registry:latest
-  #   hostname: schema-registry
-  #   depends_on:
-  #     - kafka_b
-  #   ports:
-  #     - '8081:8081'
-  #   environment:
-  #     SCHEMA_REGISTRY_HOST_NAME: schema-registry
-  #     SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka_b:9094,PLAINTEXT_INTERNAL://localhost:29092
-  # SCHEMA_REGISTRY_DEBUG: 'true'
+      - nats_data:/data
 
   db:
     image: 'postgres:16.2'
@@ -81,7 +31,21 @@ services:
       POSTGRES_DB: '${PG_DB}'
     ports:
       - '5432:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  prisma-migrate:
+    build:
+      context: .
+      dockerfile: Dockerfile.prisma
+    environment:
+      DATABASE_URL: 'postgresql://${PG_USER}:${PG_PW}@db:5432/${PG_DB}?schema=public'
+    depends_on:
+      - db
+    command: npx prisma migrate deploy
 
 volumes:
-  kafka_data:
+  nats_data:
+    driver: local
+  postgres_data:
     driver: local
