--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@fastify/static": "^7.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "kafkajs": "^2.2.4",
+    "nats": "^2.28.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
